fix: add CORS config with setAllowedOriginPatterns to allow all origins